--- a/Chamasma/.swiftlint.yml
+++ b/Chamasma/.swiftlint.yml
@@ -11,245 +11,340 @@
 #  - Source/*/ExcludedFile.swift # Exclude files with a wildcard
 
 # Default rules
-blanket_disable_command: error
-block_based_kvo: error
-class_delegate_protocol: error
-closing_brace: error
-closure_parameter_position: error
-colon: error
-comma: error
-comment_spacing: error
-compiler_protocol_init: error
-computed_accessors_order: error
-control_statement: error
-custom_rules: error
-cyclomatic_complexity: error
-deployment_target: error
-discouraged_direct_init: error
-duplicate_conditions: error
-duplicate_enum_cases: error
-duplicate_imports: error
+blanket_disable_command:
+    severity: error
+block_based_kvo:
+    severity: error
+class_delegate_protocol:
+    severity: error
+closing_brace:
+    severity: error
+closure_parameter_position:
+    severity: error
+colon:
+    severity: error
+comma:
+    severity: error
+comment_spacing:
+    severity: error
+compiler_protocol_init:
+    severity: error
+computed_accessors_order:
+    severity: error
+control_statement:
+    severity: error
+#custom_rules
+#cyclomatic_complexity
+deployment_target:
+    severity: error
+discouraged_direct_init:
+    severity: error
+duplicate_conditions:
+    severity: error
+duplicate_enum_cases:
+    severity: error
+duplicate_imports:
+    severity: error
 duplicated_key_in_dictionary_literal: error
-dynamic_inline: error
-empty_enum_arguments: error
-empty_parameters: error
-empty_parentheses_with_trailing_closure: error
+dynamic_inline:
+    severity: error
+empty_enum_arguments:
+    severity: error
+empty_parameters:
+    severity: error
+empty_parentheses_with_trailing_closure:
+    severity: error
 file_length:
-  - 500
-  - 1200
-for_where: error
-force_cast: error
-force_try: error
-function_body_length: error
-function_parameter_count: error
-generic_type_name: error
-identifier_name: error
+    - 500
+    - 1200
+for_where:
+    severity: error
+force_cast:
+    severity: error
+force_try:
+    severity: error
+function_body_length:
+    - 50
+    - 100
+function_parameter_count:
+    warning: 5
+    error: 8
+    ignores_default_parameters: false
+generic_type_name:
+    severity: error
+identifier_name:
+    max_length:
+        warning: 40
+        error: 60
+    excluded: [“^id$”]
+    allowed_symbols: []
+    validates_start_with_lowercase: true
 implicit_getter: error
-inclusive_language: error
-invalid_swiftlint_command: error
-is_disjoint: error
-large_tuple: error
-leading_whitespace: error
-legacy_cggeometry_functions: error
-legacy_constant: error
-legacy_constructor: error
-legacy_hashing: error
-legacy_nsgeometry_functions: error
-legacy_random: error
+inclusive_language:
+    severity: warning
+    additional_terms: []
+    override_terms: []
+    override_allowed_terms: []
+invalid_swiftlint_command:
+    severity: error
+is_disjoint:
+    severity: error
+large_tuple:
+    error: 4
+leading_whitespace:
+    severity: error
+legacy_cggeometry_functions:
+    severity: error
+legacy_constant:
+    severity: error
+legacy_constructor:
+    severity: error
+legacy_hashing:
+    severity: error
+legacy_nsgeometry_functions:
+    severity: error
+legacy_random:
+    severity: error
 line_length:
-  - 110
-  - 130
-mark: error
-multiple_closures_with_trailing_closure: error
-nesting: error
-no_fallthrough_only: error
-no_space_in_method_call: error
-notification_center_detachment: error
-ns_number_init_as_function_reference: error
-nsobject_prefer_isequal: error
-opening_brace: error
-operator_whitespace: error
-orphaned_doc_comment: error
-private_over_fileprivate: error
-private_unit_test: error
-protocol_property_accessors_order: error
-reduce_boolean: error
-redundant_discardable_let: error
-redundant_objc_attribute: error
-redundant_optional_initialization: error
-redundant_set_access_control: error
-redundant_string_enum_value: error
-redundant_void_return: error
-return_arrow_whitespace: error
-self_in_property_initialization: error
-shorthand_operator: error
-statement_position: error
-superfluous_disable_command: error
-switch_case_alignment: error
-syntactic_sugar: error
+    - 110
+    - 130
+mark:
+    severity: error
+multiple_closures_with_trailing_closure:
+    severity: error
+nesting:
+    severity: error
+no_fallthrough_only:
+    severity: error
+no_space_in_method_call:
+    severity: error
+notification_center_detachment:
+    severity: error
+ns_number_init_as_function_reference:
+    severity: error
+nsobject_prefer_isequal:
+    severity: error
+opening_brace:
+    severity: error
+operator_whitespace:
+    severity: error
+orphaned_doc_comment:
+    severity: error
+private_over_fileprivate:
+    severity: error
+private_unit_test:
+    severity: error
+protocol_property_accessors_order:
+    severity: error
+reduce_boolean:
+    severity: error
+redundant_discardable_let:
+    severity: error
+redundant_objc_attribute:
+    severity: error
+redundant_optional_initialization:
+    severity: error
+redundant_set_access_control:
+    severity: error
+redundant_string_enum_value:
+    severity: error
+redundant_void_return:
+    severity: error
+return_arrow_whitespace:
+    severity: error
+self_in_property_initialization:
+    severity: error
+shorthand_operator:
+    severity: error
+statement_position:
+    severity: error
+superfluous_disable_command:
+    severity: error
+switch_case_alignment:
+    severity: error
+syntactic_sugar:
+    severity: error
 todo: warning
-#trailing_comma:
-#  severity: error
-trailing_newline: error
-trailing_semicolon: error
-trailing_whitespace: error
+trailing_comma:
+  mandatory_comma: true
+  severity: error
+trailing_newline:
+    severity: error
+trailing_semicolon:
+    severity: error
+trailing_whitespace:
+    severity: error
 type_body_length:
-  - 300
-  - 400
-type_name: error
-unavailable_condition: error
-unneeded_break_in_switch: error
-unused_closure_parameter: error
-unused_control_flow_label: error
-unused_enumerated: error
-unused_optional_binding: error
-unused_setter_value: error
-valid_ibinspectable: error
-vertical_parameter_alignment: error
-vertical_whitespace: error
-void_function_in_ternary: error
-void_return: error
-xctfail_message: error
+    - 300
+    - 400
+type_name:
+    severity: error
+unavailable_condition:
+    severity: error
+unneeded_break_in_switch:
+    severity: error
+unused_closure_parameter:
+    severity: error
+unused_control_flow_label:
+    severity: error
+unused_enumerated:
+    severity: error
+unused_optional_binding:
+    severity: error
+unused_setter_value:
+    severity: error
+valid_ibinspectable:
+    severity: error
+vertical_parameter_alignment:
+    severity: error
+vertical_whitespace:
+    severity: error
+void_function_in_ternary:
+    severity: error
+void_return:
+    severity: error
+xctfail_message:
+    severity: error
 
-disabled_rules: # rule identifiers to exclude from running
-  
+#disabled_rules: # rule identifiers to exclude from running
+#
 opt_in_rules: # some rules are only opt-in
-  - accessibility_label_for_image: error
-  - accessibility_trait_for_button: error
-  - anonymous_argument_in_multiline_closure: error
-  - anyobject_protocol: error
-  - array_init: error
-  - attributes: error
-  - balanced_xctest_lifecycle: error
-  - closure_body_length: error
-  - closure_end_indentation: error
-  - closure_spacing: error
-  - collection_alignment: error
-  - comma_inheritance: error
-  - conditional_returns_on_newline: error
-  - contains_over_filter_count: error
-  - contains_over_filter_is_empty: error
-  - contains_over_first_not_nil: error
-  - contains_over_range_nil_comparison: error
-  - convenience_type: error
-  - direct_return: error
-  - discarded_notification_center_observer: error
-  - discouraged_assert: error
-  - discouraged_none_name: error
-  - discouraged_object_literal: error
-  - discouraged_optional_boolean: error
-  - discouraged_optional_collection: error
-  - empty_collection_literal: error
-  - empty_count: error
-  - empty_string: error
-  - empty_xctest_method: error
-  - enum_case_associated_values_count: error
-  - expiring_todo: error
-  - explicit_acl: error
-  - explicit_enum_raw_value: error
-  - explicit_init: error
-  - explicit_top_level_acl: error
-  - explicit_type_interface: error
-  - extension_access_modifier: error
-  - fallthrough: error
-  - fatal_error_message: error
-  - file_header: error
-  - file_name: error
-  - file_name_no_space: error
-  - file_types_order: error
-  - first_where: error
-  - flatmap_over_map_reduce: error
-  - force_unwrapping: error
-  - function_default_parameter_at_end: error
-  - ibinspectable_in_extension: error
-  - identical_operands: error
-  - implicit_return: error
-  - implicitly_unwrapped_optional: error
-  - indentation_width: error
-  - inert_defer: error
-  - joined_default_parameter: error
-  - last_where: error
-  - legacy_multiple: error
-  - legacy_objc_type: error
-  - let_var_whitespace: error
-  - literal_expression_end_indentation: error
-  - local_doc_comment: error
-  - lower_acl_than_parent: error
-  - missing_docs: error
-  - modifier_order: error
-  - multiline_arguments: error
-  - multiline_arguments_brackets: error
-  - multiline_function_chains: error
-  - multiline_literal_brackets: error
-  - multiline_parameters: error
-  - multiline_parameters_brackets: error
-  - nimble_operator: error
-  - no_extension_access_modifier: error
-  - no_grouping_extension: error
-  - no_magic_numbers: error
-  - nslocalizedstring_key: error
-  - nslocalizedstring_require_bundle: error
-  - number_separator: error
-  - object_literal: error
-  - operator_usage_whitespace: error
-  - optional_enum_case_matching: error
-  - overridden_super_call: error
-  - override_in_extension: error
-  - pattern_matching_keywords: error
-  - period_spacing: error
-  - prefer_nimble: error
-  - prefer_self_in_static_references: error
-  - prefer_self_type_over_type_of_self: error
-  - prefer_zero_over_explicit_init: error
-  - prefixed_toplevel_constant: error
-  - private_action: error
-  - private_outlet: error
-  - private_subject: error
-  - prohibited_interface_builder: error
-  - prohibited_super_call: error
-  - quick_discouraged_call: error
-  - quick_discouraged_focused_test: error
-  - quick_discouraged_pending_test: error
-  - raw_value_for_camel_cased_codable_enum: error
-  - reduce_into: error
-  - redundant_nil_coalescing: error
-  - redundant_type_annotation: error
-  - required_deinit: error
-  - required_enum_case: error
-  - return_value_from_void_function: error
-  - self_binding: error
-  - shorthand_optional_binding: error
-  - single_test_class: error
-  - sorted_enum_cases: error
-  - sorted_first_last: error
-  - sorted_imports: error
-  - static_operator: error
-  - strict_fileprivate: error
-  - strong_iboutlet: error
-  - superfluous_else: error
-  - switch_case_on_newline: error
-  - test_case_accessibility: error
-  - toggle_bool: error
-  - trailing_closure: error
-  - type_contents_order: error
-  - unavailable_function: error
-  - unneeded_parentheses_in_closure_argument: error
-  - unowned_variable_capture: error
-  - untyped_error_in_catch: error
-  - unused_capture_list: error
-  - vertical_parameter_alignment_on_call: error
-  - vertical_whitespace_between_cases: error
-  - vertical_whitespace_closing_braces: error
-  - vertical_whitespace_opening_braces: error
-  - weak_delegate: error
-  - xct_specific_matcher: error
-  - yoda_condition: error
+    - accessibility_label_for_image
+    - accessibility_trait_for_button
+    - anonymous_argument_in_multiline_closure
+    - anyobject_protocol
+    - array_init
+    - attributes
+    - balanced_xctest_lifecycle
+    - closure_body_length
+    - closure_end_indentation
+    - closure_spacing
+    - collection_alignment
+    - comma_inheritance
+    - conditional_returns_on_newline
+    - contains_over_filter_count
+    - contains_over_filter_is_empty
+    - contains_over_first_not_nil
+    - contains_over_range_nil_comparison
+    - convenience_type
+    - direct_return
+    - discarded_notification_center_observer
+    - discouraged_assert
+    - discouraged_none_name
+    - discouraged_object_literal
+    - discouraged_optional_boolean
+    - discouraged_optional_collection
+    - empty_collection_literal
+    - empty_count
+    - empty_string
+    - empty_xctest_method
+    - enum_case_associated_values_count
+    - expiring_todo
+    - explicit_acl
+    - explicit_enum_raw_value
+    - explicit_init
+    - explicit_top_level_acl
+    - explicit_type_interface
+    - extension_access_modifier
+    - fallthrough
+    - fatal_error_message
+    - file_header
+    - file_name
+    - file_name_no_space
+    - file_types_order
+    - first_where
+    - flatmap_over_map_reduce
+    - force_unwrapping
+    - function_default_parameter_at_end
+    - ibinspectable_in_extension
+    - identical_operands
+    - implicit_return
+    - implicitly_unwrapped_optional
+    - indentation_width
+    - inert_defer
+    - joined_default_parameter
+    - last_where
+    - legacy_multiple
+    - legacy_objc_type
+    - let_var_whitespace
+    - literal_expression_end_indentation
+    - local_doc_comment
+    - lower_acl_than_parent
+    - missing_docs
+    - modifier_order
+    - multiline_arguments
+    - multiline_arguments_brackets
+    - multiline_function_chains
+    - multiline_literal_brackets
+    - multiline_parameters
+    - multiline_parameters_brackets
+    - nimble_operator
+    - no_extension_access_modifier
+    - no_grouping_extension
+    - no_magic_numbers
+    - nslocalizedstring_key
+    - nslocalizedstring_require_bundle
+    - number_separator
+    - object_literal
+    - operator_usage_whitespace
+    - optional_enum_case_matching
+    - overridden_super_call
+    - override_in_extension
+    - pattern_matching_keywords
+    - period_spacing
+    - prefer_nimble
+    - prefer_self_in_static_references
+    - prefer_self_type_over_type_of_self
+    - prefer_zero_over_explicit_init
+    - prefixed_toplevel_constant
+    - private_action
+    - private_outlet
+    - private_subject
+    - prohibited_interface_builder
+    - prohibited_super_call
+    - quick_discouraged_call
+    - quick_discouraged_focused_test
+    - quick_discouraged_pending_test
+    #  - raw_value_for_camel_cased_codable_enum
+    - reduce_into
+    - redundant_nil_coalescing
+    - redundant_type_annotation
+    - required_deinit
+    #  - required_enum_case
+    - return_value_from_void_function
+    - self_binding
+    - shorthand_optional_binding
+    - single_test_class
+    - sorted_enum_cases
+    - sorted_first_last
+    - sorted_imports
+    - static_operator
+    - strict_fileprivate
+    - strong_iboutlet
+    - superfluous_else
+    - switch_case_on_newline
+    - test_case_accessibility
+    - toggle_bool
+    - trailing_closure
+    - type_contents_order
+    - unavailable_function
+    - unneeded_parentheses_in_closure_argument
+    - unowned_variable_capture
+    - untyped_error_in_catch
+    - unused_capture_list
+    - vertical_parameter_alignment_on_call
+    - vertical_whitespace_between_cases
+    - vertical_whitespace_closing_braces
+    - vertical_whitespace_opening_braces
+    - weak_delegate
+    - xct_specific_matcher
+    - yoda_condition
+    
+    # Analyzer Rules
+    - capture_variable: warning
+    - explicit_self: warning
+    - typesafe_array_init: warning
+    - unused_declaration: warning
+    - unused_import: warning
   
-  # Analyzer Rules
-  - capture_variable: warning
-  - explicit_self: warning
-  - typesafe_array_init: warning
-  - unused_declaration: warning
-  - unused_import: warning
-  
-reporter: "xcode" # reporter type (xcode, json, csv, checkstyle, junit, html, emoji, so
+reporter: "xcode"
