--- a/Chamasma/.swiftlint.yml
+++ b/Chamasma/.swiftlint.yml
@@ -274,7 +274,7 @@ opt_in_rules:
     - file_header
     - file_name
     - file_name_no_space
-    - file_types_order
+#    - file_types_order
     - first_where
     - flatmap_over_map_reduce
     - force_unwrapping
@@ -356,7 +356,7 @@ opt_in_rules:
     - untyped_error_in_catch
     - unused_capture_list
     - vertical_parameter_alignment_on_call
-    - vertical_whitespace_between_cases
+#    - vertical_whitespace_between_cases
     - vertical_whitespace_closing_braces
     - vertical_whitespace_opening_braces
     - weak_delegate
@@ -449,8 +449,8 @@ file_name:
     severity: error
 file_name_no_space:
     severity: error
-file_types_order:
-    severity: error
+#file_types_order:
+#    severity: error
 first_where:
     severity: error
 flatmap_over_map_reduce:
@@ -613,8 +613,8 @@ unused_capture_list:
     severity: error
 vertical_parameter_alignment_on_call:
     severity: error
-vertical_whitespace_between_cases:
-    severity: error
+#vertical_whitespace_between_cases:
+#    severity: error
 vertical_whitespace_closing_braces:
     severity: error
 vertical_whitespace_opening_braces:
