--- a/Chamasma/.swiftlint.yml
+++ b/Chamasma/.swiftlint.yml
@@ -98,7 +98,7 @@ identifier_name:
     max_length:
         warning: 40
         error: 60
-    excluded: [“^id$”]
+    excluded: [“^id$”, "id"]
     allowed_symbols: []
     validates_start_with_lowercase: true
 implicit_getter:
