--- a/Chamasma/.swiftlint.yml
+++ b/Chamasma/.swiftlint.yml
@@ -16,6 +16,7 @@
 included: # paths to include during linting. `--path` is ignored if present.
     - Chamasma
     - DesignSystem
+    - Presentation
 
 # MARK: - Excluded
 
