Add model support into MenuCell and refactor CategoryView (#10)
* add Category Page

* complete codereview changes #1

* add model support for MealCell and refactor CategoryView

* merge develop into feature/category-page

* complete codereview recommendations #1

* remove unnecessary code

* Revert "add swiftlint into Module called `Common` and resolve all errors regarding violations and complete codereview suggestions"

This reverts commit a077351dd09a0caa31e274be32ed29a29d12ff1c.

* add Presentation module into swiftlint checks and fix all vilations

---------

Co-authored-by: Mariam Ormotsadze <Mariam.Ormotsadze@space.ge>

--- a/Chamasma/.swiftlint.yml
+++ b/Chamasma/.swiftlint.yml
@@ -16,7 +16,7 @@
 included: # paths to include during linting. `--path` is ignored if present.
     - Chamasma
     - DesignSystem
-    - Common
+    - Presentation
 
 # MARK: - Excluded
 
